Page count assignment

--- a/demo.tex
+++ b/demo.tex
@@ -5,10 +5,12 @@
 
 % Section 10.2
 \subsection{LCD Light Activation}
+\todo{1 page}
 
 % Section 10.3
 \subsection{Sensor Query}
 
 % Section 10.4
 \subsection{Fault Recovery (Loss of Power)}
+\todo{1 page}
 
