--- a/hwsw.tex
+++ b/hwsw.tex
@@ -14,6 +14,7 @@
 
 % Section 5.1.4
 \subsubsection{Network Library}
+\todo{3 pages}
 
 % Section 5.2
 \subsection{Microcontrollers}
@@ -44,18 +45,23 @@
 
 % Section 5.4
 \subsection{LCD}
+\todo{whole section}
 
 % Section 5.4.1
 \subsubsection{Capabilities (i.e Speed, Medium)}
+\todo{1 page}
 
 % Section 5.4.2
 \subsubsection{Driver}
+\todo{2 page}
 
 % Section 5.4.3
 \subsubsection{Touchscreen}
+\todo{1 page}
 
 % Section 5.4.4
 \subsubsection{UI Library}
+\todo{2 page}
 
 % Section 5.5
 \subsection{Android Application}
