--- a/desc.tex
+++ b/desc.tex
@@ -6,21 +6,74 @@
 % Section 2.2
 \subsection{Objectives}
 \todo{3 pages}
+In order to enable homeowners to have the best experience with their new WHCS
+we will explain some core project objectives. These describe what the end-user
+would be able to do with the system at a high level.
 
 % Section 2.2.1
 \subsubsection{Voice Control}
+Voice control
+from a supported Android device will allow the user to remotely activate any
+part of the home that is integreated with WHCS. This would include activating
+lights, unlocking doors, turning off and on applicances (by controlling their
+respective outlets), quering sensors, and any other home specific applications.
+All of these \emph{actions} and \emph{targets} will be able to be used just
+from the user's voice. Voice actions will be specific to each target, but they
+will consist of verbs such as \textbf{turn}, \textbf{query}, \textbf{check},
+\textbf{open}, \textbf{close}, and so on. The list of targets will directly
+correspond to the number of control modules listed in the home and their type.
+This will be explained in more detail in Section \ref{sec:sys-design}.
 
 % Section 2.2.2
 \subsubsection{Light Activation}
+Through activating lights and querying their status remotely, a homeowner will
+no longer have to be present in the same room as the switch.  By connecting
+lights to WHCS, they will become integrated in to the home network and not be
+isolated in each room of the home.  With just a spoken command or a tap on
+their smartphone, lights will be controlled.  By automating the process of
+toggling light switches, WHCS will have the ability to be smart about when they
+are ON or OFF, freeing the user from having to think about their state at all.
+In addition, lights, just like all of the other connected control modules in
+the home, will be able to be actuated on a specific schedule. This schedule
+\todo{make a section for scheduling or remove} can be designed by the homeowner
+to meet their daily lives or in a special circumstance, such as travel.
 
 % Section 2.2.3
 \subsubsection{Outlet Activation}
+Lights aren't the only actionable think in the home. There are a multitude of
+applicances throughout the home which could benefit from remote control. Some
+of these include coffee makers, toasters, or computers\todo{find some better
+examples}. If integrated with WHCS through outlet control, these appliances
+would be able to be apart of the home network. Imagine being able to start the
+morning coffee from the comfort of the bedroom. This would be possible with an
+appropriate coffee maker and WHCS outlet control. An added benefit from having
+outlets being automated is that there would be less draw from power leeching
+devices' power subsystems, which may be always-on \todo{cite article showing
+hyping up how much power you lose to leeches}.
 
 % Section 2.2.4
 \subsubsection{Door Access}
 
 % Section 2.2.5
 \subsubsection{Data Collection}
+In order to give users a broad overview of their home's state, WHCS supports
+the collection of data from \emph{arbitrary} sensors. Data collected can
+include temperature, humidity, light level, sound levels, and so on. Each home
+may have sensors throughout collecting various data that the homeowner deems
+useful. The sensor integration with WHCS would be transparent to the user. All
+they would see would be the list of sensors and the corresponding values.
+WHCS's pluggable control module's would be tailored to each sensor or set of
+sensors, which would relay their data back to the base station. The base
+station would support queries from the LCD interface and simultaneously from a
+connected phone.
+
+Beyond home sensors, all of the the other controllable objects in the WHCS
+would have metadata being collected about them at all times. This extra metadata
+would include \textbf{connection status} and \textbf{power status}. See Section
+\ref{sec:network-library} for a more detailed description of the supported
+network packets and the type of fields they support.
+
+All of this raw data being collected could be displayed to the user in the form of graphs and tables. It would serve as the basis for a set of statistics for display to the user.
 
 % Section 2.3
 \subsection{Requirements and Specifications}
