W: Objectives and add image

--- a/demo.tex
+++ b/demo.tex
@@ -14,3 +14,8 @@
 \subsection{Fault Recovery (Loss of Power)}
 \todo{1 page}
 
+% Section 10.5
+\subsection{Remote Door Access}
+\label{sec:demo-door}
+\todo{1 page}
+
