In progress changes and new export

--- a/constraints.tex
+++ b/constraints.tex
@@ -1,5 +1,7 @@
 % Section 3 in file constraints.tex
 
+\todo{EXPAND: as per Richie's advice to use the PPT for section}
+
 % Section 3.1
 \subsection{Economic Factors}
 
