--- a/desc.tex
+++ b/desc.tex
@@ -1,9 +1,15 @@
 % Section 2 in file desc.tex
 
-% Section 2.1
-\subsection{Project Motivation and Goals}
+\subsection{Motivation}
 
-%\includegraphics[]{"Interaction With System.pdf"}
+%\begin{figure}
+%\centering
+%\includegraphics[]{"Interaction With System"}
+%\label{fig:sys-interaction}
+%\end{figure}
+
+\subsection{Overview}
+
 
 % Section 2.2
 \subsection{Objectives}
@@ -42,7 +48,7 @@ to meet their daily lives or in a special circumstance, such as travel.
 
 % Section 2.2.3
 \subsubsection{Outlet Activation}
-Lights aren't the only actionable think in the home. There are a multitude of
+Lights aren't the only actionable thing in the home. There are a multitude of
 applicances throughout the home which could benefit from remote control. Some
 of these include coffee makers, toasters, or computers\todo{find some better
 examples}. If integrated with WHCS through outlet control, these appliances
@@ -50,7 +56,7 @@ would be able to be apart of the home network. Imagine being able to start the
 morning coffee from the comfort of the bedroom. This would be possible with an
 appropriate coffee maker and WHCS outlet control. An added benefit from having
 outlets being automated is that there would be less draw from power leeching
-devices' power subsystems, which may be always-on \todo{cite article showing
+devices' power subsystems, which may be always-on \todo{cite article
 hyping up how much power you lose to leeches}.
 
 % Section 2.2.4
@@ -114,4 +120,9 @@ statistics for display to the user.
 
 % Section 2.4.4
 \subsubsection{Nest Labs}
+\todo{0.5 pages}
+
+% Section 2.4.5
+\subsubsection{X10}
+\todo{0.5 pages}
 
