--- a/pcb.tex
+++ b/pcb.tex
@@ -3,9 +3,16 @@
 % Section 6.1
 \subsection{Software Considerations}
 \todo{2 pages}
+Before designing any of our Printed Circuit Boards, we decided to analyze which
+software would allow us to do the job the quickest and easiest. Nearly all of
+the team was familiar with EAGLE as it's one of the most talked about board
+design software due to its EAGLE Lite version. Instead of going with the most
+common solution, we decided to compare EAGLE CAD to another open source
+solution: KiCad.
 
 % Section 6.1.1
 \subsubsection{KiCad}
+One of the benefits of KiCad versus
 
 % Section 6.1.2
 \subsubsection{EAGLE}
