--- a/toc.tex
+++ b/toc.tex
@@ -21,6 +21,7 @@
 \section{Hardware and Software Design}
 \import{./}{hwsw.tex}
 
+\todo{SECTION: add ``Summary of Related Standards'' and merely reference them}
 % Section 6
 \section{Printed Circuit Board}
 \import{./}{pcb.tex}
