W: Nest labs and others

--- a/hwsw.tex
+++ b/hwsw.tex
@@ -19,6 +19,9 @@
 
 % Section 5.2
 \subsection{Microcontrollers}
+\todo{Talk about pin count and having to disable the JTAG fuses to get access to those pins}
+\todo{Talk about the speed grade for the CPU and why a higher grade would be faster}
+
 
 % Section 5.2.1
 \subsubsection{Development Environment}
@@ -49,7 +52,7 @@
 \todo{whole section}
 
 % Section 5.4.1
-\subsubsection{Capabilities (i.e Speed, Medium)}
+\subsubsection{Capabilities}
 \todo{1 page}
 
 % Section 5.4.2
