--- a/desc.tex
+++ b/desc.tex
@@ -14,23 +14,28 @@
 % Section 2.2
 \subsection{Objectives}
 \todo{3 pages}
-In order to enable homeowners to have the best experience with their new WHCS
-we will explain some core project objectives. These describe what the end-user
-would be able to do with the system at a high level.
+In order to enable homeowners to have the best experience with their new WHCS,
+we will explain our core project objectives. These describe what the end-users
+are be able to do with the system at a high level.
 
 % Section 2.2.1
 \subsubsection{Voice Control}
-Voice control
-from a supported Android device will allow the user to remotely activate any
-part of the home that is integreated with WHCS. This would include activating
-lights, unlocking doors, turning off and on applicances (by controlling their
-respective outlets), quering sensors, and any other home specific applications.
-All of these \emph{actions} and \emph{targets} will be able to be used just
-from the user's voice. Voice actions will be specific to each target, but they
-will consist of verbs such as \textbf{turn}, \textbf{query}, \textbf{check},
-\textbf{open}, \textbf{close}, and so on. The list of targets will directly
-correspond to the number of control modules listed in the home and their type.
-This will be explained in more detail in Section \ref{sec:sys-design}.
+Voice control from a supported, BlueTooth enabled, Android device will allow
+the user to remotely activate any part of the home that is integrated with
+WHCS. This would include activating lights, unlocking doors, turning off and on
+appliances (by controlling their respective outlets), querying sensors, and any
+other home specific applications.\footnotemark All of these \emph{actions} and
+\emph{targets} will be able to be used just from the user's voice. Voice
+actions will be specific to each target, but they will consist of verbs such as
+\textbf{turn}, \textbf{query}, \textbf{check}, \textbf{open}, \textbf{close},
+and so on. The list of targets will directly correspond to the number of
+control modules listed in the home and their type.  This will be explained in
+more detail in \autoref{sec:sys-design}.
+
+\footnotetext{WHCS is an extensible system. Control modules are built with a
+plugin-like interface, allowing for intrepid home owners to have a fully custom
+home. This combined with the control module's free breadboard area, new
+applications may be created.}
 
 % Section 2.2.2
 \subsubsection{Light Activation}
@@ -56,8 +61,8 @@ would be able to be apart of the home network. Imagine being able to start the
 morning coffee from the comfort of the bedroom. This would be possible with an
 appropriate coffee maker and WHCS outlet control. An added benefit from having
 outlets being automated is that there would be less draw from power leeching
-devices' power subsystems, which may be always-on \todo{cite article
-hyping up how much power you lose to leeches}.
+devices' power subsystems, which may be always-on. \todo{cite article
+hyping up how much power you lose to leeches}
 
 % Section 2.2.4
 \subsubsection{Door Access}
@@ -78,7 +83,7 @@ doors will support additional security features. These additional features will
 include mechanisms to prevent replay attacks (which garage doors are vulnerable
 to) and also prevent outside attackers from engaging the door opening mechanism
 just by sniffing traffic. For additional details on the security considerations
-of WHCS, please refer to Section \ref{sec:safety-sec}.
+of WHCS, please refer to \autoref{sec:safety-sec}.
 
 % Section 2.2.5
 \subsubsection{Data Collection}
@@ -89,14 +94,16 @@ may have sensors throughout collecting various data that the homeowner deems
 useful. The sensor integration with WHCS would be transparent to the user. All
 they would see would be the list of sensors and the corresponding values.
 WHCS's pluggable control module's would be tailored to each sensor or set of
-sensors, which would relay their data back to the base station. The base
-station would support queries from the LCD interface and simultaneously from a
-connected phone.
+sensors, which would relay their data back to the base station. This is
+illustrated in \autoref{fig:many-to-one}. The base station would support
+queries from the LCD interface and simultaneously from a connected phone.
+
+\ucfgfx{fig:many-to-one}{many-to-one}{A illustration showing the translation of many different sensor nodes to WHCS' protocol}
 
 Beyond home sensors, all of the the other controllable objects in the WHCS
 would have metadata being collected about them at all times. This extra metadata
-would include \textbf{connection status} and \textbf{power status}. See Section
-\ref{sec:network-library} for a more detailed description of the supported
+would include \textbf{connection status} and \textbf{power status}. See
+\autoref{sec:network-library} for a more detailed description of the supported
 network packets and the type of fields they support.
 
 All of this raw data being collected could be displayed to the user in the form
@@ -121,6 +128,23 @@ statistics for display to the user.
 % Section 2.4.4
 \subsubsection{Nest Labs}
 \todo{0.5 pages}
+Unlike the previous companies, \href{http://nest.com}{Nest Labs} is quite new,
+but has certainly claimed its space in the smart home market with its smart
+Nest Thermostat. Their other product, the Nest Protect, a smart smoke and
+CO$_2$ detector, integrates smoothly with the thermostat allowing for remote
+monitoring and control of the home.
+
+Nest Labs was recently
+\href{http://www.forbes.com/sites/greatspeculations/2014/01/17/googles-strategy-behind-the-3-2-billion-acquisition-of-nest-labs/}{purchased by Google for \$3.2 billion dollars},
+which certainly gives the company a powerful position in the market. One of
+Nest's goals is to have a \emph{platform} for other companies and developers to
+create new products that \emph{Work with Nest \texttrademark}. This strategy is
+clever as now the success of the company will grow with every new device and
+developer who chooses to integrate their products with the Nest suite.
+
+In terms of functionality, Nest has a online web interface and a mobile app
+that will display all of the networked devices, allowing for a highly connected
+experience.
 
 % Section 2.4.5
 \subsubsection{X10}
