--- a/whcs.tex
+++ b/whcs.tex
@@ -84,7 +84,7 @@ pdfauthor={Grant Hernandez},
 %     Param 1: label
 %     Param 2: graphics path
 %     Param 3: caption
-% TODO: provide optional includegraphics input as #4
+% TODO: provide optional includegraphics dimensions as #4
 \newcommand{\ucfgfx}[3]{
 \begin{figure}
 \centering
