--- a/hwsw.tex
+++ b/hwsw.tex
@@ -150,6 +150,7 @@
 
 % Section 5.8.4
 \subsubsection{Electronic Strike}
+\label{sec:electronic-strike}
 
 % Section 5.8.4.1
 \paragraph{Normally Open or Normally Closed}
