--- a/pcb.tex
+++ b/pcb.tex
@@ -14,7 +14,7 @@ solution: KiCad.
 \subsubsection{EAGLE}
 EAGLE PCB is commercial software for schematic capture and board layout. It
 supports a wide variety of features that would help us make our board. The only
-issue is that the normal software costs money. Luckily they offer a free
+issue is that the normal software costs money. Luckily, they offer a free
 evaluation version that can only be used for non-commercial purposes.
 
 This freeware version of EAGLE has strict limitations in the size of the board
@@ -35,7 +35,7 @@ One issue with KiCad is the lack of a built in Autorouter. KiCad provides an ext
 
 Another nifty feature that KiCad has is its 3D board view. Figure~\ref{fig:kicad-3D} shows the 3D view of an example board by Orlando Arias\footnote{A 3$^{rd}$ year Computer Engineering student at UCF}. This feature is great for getting a sense of your board layout in relation to the selected footprints.
 
-\ucfgfx{fig:kicad-3D}{kicad-3D}{an ATtiny development board displayed in KiCad's 3D board view}
+\ucfgfx{fig:kicad-3D}{kicad-3D}{An ATtiny development board displayed in KiCad's 3D board view}
 
 % Section 6.2
 \subsection{Layout}
