W: Section 2 cleanup and Nest

--- a/constraints.tex
+++ b/constraints.tex
@@ -52,7 +52,7 @@ Through premptive \emph{analysis}, we may determine problem areas. We will
 problem, its potential impact, what area does it impact, and what we plan to do
 to address it. Finally, we will \emph{anticipate} failures and build in the
 developed solutions directly in to our design. These solutions may be in the
-form of warning labels (Ex. NO NOT EXCEED 12V 10A) and software checks.
+form of warning labels (Ex. DO NOT EXCEED 12V 10A) and software checks.
 
 % Section 3.4
 \subsection{Spectrum Considerations}
