--- a/desc.tex
+++ b/desc.tex
@@ -2,12 +2,6 @@
 
 \subsection{Motivation}
 
-%\begin{figure}
-%\centering
-%\includegraphics[]{"Interaction With System"}
-%\label{fig:sys-interaction}
-%\end{figure}
-
 \subsection{Overview}
 
 
@@ -54,7 +48,7 @@ to meet their daily lives or in a special circumstance, such as travel.
 % Section 2.2.3
 \subsubsection{Outlet Activation}
 Lights aren't the only actionable thing in the home. There are a multitude of
-applicances throughout the home which could benefit from remote control. Some
+appliances throughout the home which could benefit from remote control. Some
 of these include coffee makers, toasters, or computers\todo{find some better
 examples}. If integrated with WHCS through outlet control, these appliances
 would be able to be apart of the home network. Imagine being able to start the
@@ -100,7 +94,7 @@ queries from the LCD interface and simultaneously from a connected phone.
 
 \ucfgfx{fig:many-to-one}{many-to-one}{A illustration showing the translation of many different sensor nodes to WHCS' protocol}
 
-Beyond home sensors, all of the the other controllable objects in the WHCS
+Beyond home sensors, all of the other controllable objects in the WHCS
 would have metadata being collected about them at all times. This extra metadata
 would include \textbf{connection status} and \textbf{power status}. See
 \autoref{sec:network-library} for a more detailed description of the supported
@@ -132,19 +126,27 @@ Unlike the previous companies, \href{http://nest.com}{Nest Labs} is quite new,
 but has certainly claimed its space in the smart home market with its smart
 Nest Thermostat. Their other product, the Nest Protect, a smart smoke and
 CO$_2$ detector, integrates smoothly with the thermostat allowing for remote
-monitoring and control of the home.
+monitoring and control of the home. For their thermostat, the primary goal is
+to have a smart learning thermostat that aims to save energy in the home. By
+keeping temperatures at energy-saving levels when no one through the use of a
+motion sensor and learning algorithms, one of the most expensive home energy
+costs can be reduced.
+
+In terms of administration, Nest has a online web interface and a mobile app
+that will display all of the networked devices, allowing for a highly connected
+experience. Change your temperature from your warm bed or before you even get home!
 
 Nest Labs was recently
 \href{http://www.forbes.com/sites/greatspeculations/2014/01/17/googles-strategy-behind-the-3-2-billion-acquisition-of-nest-labs/}{purchased by Google for \$3.2 billion dollars},
 which certainly gives the company a powerful position in the market. One of
 Nest's goals is to have a \emph{platform} for other companies and developers to
-create new products that \emph{Work with Nest \texttrademark}. This strategy is
-clever as now the success of the company will grow with every new device and
+create new products that \href{https://nest.com/works-with-nest/}{\emph{Work with Nest \texttrademark}}. This strategy is
+clever as now the success of the company will grow with every new
 developer who chooses to integrate their products with the Nest suite.
-
-In terms of functionality, Nest has a online web interface and a mobile app
-that will display all of the networked devices, allowing for a highly connected
-experience.
+Customers will see the multitude of devices that work with Nest and realize
+that they can ``harness the future today.'' Quite a solid business model.
+Coming in at \$249, the thermostat might be a tough sell for typical home owners who
+already have a working, yet ``dumb'', thermostat.
 
 % Section 2.4.5
 \subsubsection{X10}
