--- a/hwsw.tex
+++ b/hwsw.tex
@@ -50,6 +50,27 @@
 % Section 5.4
 \subsection{LCD}
 \todo{whole section}
+Being able to interface with WHCS like a normal wall thermostat is one of our
+project goals. Having a centralized display that can quickly display the most
+important information for homeowners would be step up from traditional ``dumb''
+thermostats. With a simple LCD combined with a touchscreen, users now have a
+way to control and query their home without having to find their phone.
+
+For our LCD touchscreen, we have choosen Adafruit's 2.8" TFT\footnotemark with
+resistive touch, which uses the \href{}{ILI9341 chipset}. There are
+\href{https://github.com/adafruit/Adafruit_ILI9341/tree/master/examples}{plenty
+of usage examples} and Adafruit's
+\href{https://learn.adafruit.com/adafruit-2-dot-8-color-tft-touchscreen-breakout-v2}{excellent
+technical documentation} combined with their
+\href{https://github.com/adafruit/Adafruit_ILI9341}{libraries} guarantee that
+integrating this in to our design will be straight forward. One issue with this
+solution is with the ILI9341 driver code: it was written to target the Arduino
+platform. Now, the Arduino platform is fairly close to bare AVR, minus the
+remapped pin numbers and some support libraries. Porting Adafruit's library
+would be a feasible solution or writing a specific minimal driver would suffice
+as well.
+
+\footnotetext{\url{https://www.adafruit.com/products/1770}}
 
 % Section 5.4.1
 \subsubsection{Capabilities}
