New writing assignment for Grant

--- a/hwsw.tex
+++ b/hwsw.tex
@@ -84,6 +84,8 @@ as well.
 \subsubsection{Touchscreen}
 \todo{1 page}
 
+X+, X-, Y+, Y-
+
 % Section 5.4.4
 \subsubsection{UI Library}
 \todo{2 page}
@@ -141,6 +143,7 @@ as well.
 
 % Section 5.7
 \subsection{Base Station}
+\todo{whole section except sch breakdown}
 
 % Section 5.7.1
 \subsubsection{Software Flowchart}
@@ -159,6 +162,7 @@ as well.
 
 % Section 5.8
 \subsection{Control Module}
+\todo{whole section except schematic breakdown}
 
 % Section 5.8.1
 \subsubsection{Software Flowchart}
