--- a/hwsw.tex
+++ b/hwsw.tex
@@ -2,15 +2,120 @@
 
 % Section 5.1
 \subsection{Radio Transceiver}
+For the radio transceiver of WHCS the chip that we decided to use is Nordic
+Semiconductor{}'s NRF24L01+. This chip meets all the requirements that we set
+for our radio transceiver. The NRF is also a very popular chip that is easy to
+find and rarely out of stock. This is a benefit to the manufacturability of
+WHCS because NRFs are cheap and easy to buy in bulk. Alternatively we could
+have chosen to use an XBee radio device which implements the zigbee 802.15.4
+IEEE standard, however we did not see the need for this. XBee devices are also
+more expensive than the NRF chips that we have decided to utilize.
 
 % Section 5.1.1
-\subsubsection{Operating Principles and Usability}
+\subsubsection{Operating Principles and Usability of NRF24L01+}
+The NRF24L01+ is a radio transceiver that operates in the ISM (Industrial,
+Scientific, and Medical) radio band. The range of channels for the NRF is
+2.4GHz to 2.527 GHz, however because the designated ISM band that we are using
+only ranges from 2.4GHz to 2.5GHz we will not be able to use all of the NRF{}'s
+available channels. With the NRF we are capable of sending payloads with a
+maximum size of 32 bytes per transmission from module to module. We will be
+able to change the data length from 1 to 32 bytes in order to find the optimal
+mix between reliability and speed. Every NRF chip has the ability to
+simultaneously store 1 transmission address and 6 receiving addresses. The
+first receiving address is utilized if the auto{}-acknowledgement feature is
+enabled, so effectively there are 5 receiving addresses.  This capability gives
+us flexibility for implementing our network because we make decisions such as
+having a dedicated address to each node in the network as well as an address
+for broadcasts of certain types. The addresses of the NRF are 5 bytes wide so
+we will be able to have many NRF modules within the network. A very useful
+feature of the NRF is the ability to enable auto{}-acknowledgement. When this
+feature is activated the receipt of a transmission from one NRF to the other is
+auto{}-acked without the need from any upper level software. This simplifies
+the work necessary for creating our own network of NRF chips. We will be able
+to confirm the receipt of data therefore increasing reliability.  This
+auto{}-ack also allows the NRF to perform retries up to a given limit, so just
+in case there is noise during the transmission the NRF will repeatedly try to
+transmit again. The NRF also allows for low power mode and long range mode.
+For WHCS we will be able to tweak whether or not to use long range mode or not
+depending on the performance of the system within its environment.
+
+The NRF requires 3.3v of electricity to operate so all parts of WHCS will
+require a 3.3v line. The datasheet lists the current consumption while in
+receive mode as 18mA. This will be the most common mode for the NRF chips
+present in WHCS so they can be ready to receive commands at any time. The chip
+receives commands from a microcontroller through SPI (Serial Peripheral
+Interface). This is great because the NRF design philosophy fits perfectly with
+our microcontroller based base station and control modules. Beside the standard
+MOSI, MISO, and SCK for SPI, the NRF also has a csn pin for telling it to
+receive commands, ce pin for telling to to transmit or receive at that moment,
+and an interrupt pin for notifying the microcontroller of important situations.
+The csn pin will allow the SPI bus to be shared with other components such as
+the LCD being used for the base station. The interrupt wire pin can be
+monitored in order to listen for data received, data sent, and data failed to
+send notifications. In total the NRF will take up 6 pins whilst three of the
+pins will be shareable with other SPI components.
 
 % Section 5.1.2
-\subsubsection{Driver Class Diagram}
+\subsubsection{Driver Use Case}
+The NRF chip that we have decided to use for communication in WHCS will need to
+have a driver written for it. This will help keep the way we interface with the
+NRF consistent and will provide clean code. All of the network code that we
+write for the base station and the control modules will be relying on the
+integrity of the NRF driver that we write.  The driver provides the foundation
+and if it is not reliable then none of the code we write for our system will be
+reliable. The focus for the development of the NRF driver is elegance. We want
+everything the NRF driver offers to be simple yet accomplish everything
+necessary. We have developed the use case diagram pictured in
+\autoref{fig:nrf-usecase-diagram} as a guideline for the development of the NRF
+driver. The NRF driver should provide the functionality included in the use
+case diagram in an easy to use format.  These will be the most common uses of
+the NRF.
+
+\ucfgfx{fig:nrf-usecase-diagram}{a51-img001.png}{NRF Driver Use-case Diagram}
+
+The core use of the NRF driver is transmitting and receiving payloads. Every
+other use case is a supporting role for the final goal of transmission. The
+basis of the driver will be reading and writing registers. Everything will
+build off of this capability, especially reading and writing the payload for
+transmission. Other use cases such as changing power mode, checking the status
+of the chip, and changing from a transmitter to a receiver will be special
+forms of writing to a register. Thus reading and writing to registers is a use
+of the driver, however it will be abstracted in a way that provides ease of
+use. A user of the NRF driver will spend most of the time setting addresses,
+writing payloads, transmitting payloads, and analyzing interrupts. These use
+cases need to be implemented perfectly to provide a strong foundation for the
+networking of WHCS.
 
 % Section 5.1.3
-\subsubsection{Driver Use Case}
+\subsubsection{Driver Class Diagram}
+It was decided that the best design approach for implementing the NRF driver
+was as a class in C++. We will be using atmega microcontrollers in WHCS so C++
+is supported as a development language. Using C++ allows us to create a class
+that can leverage object oriented programming techniques such as encapsulation.
+The class diagram for the driver is shown in \autoref{fig:nrf-class-diagram}.
+Primitive functions such as ReadByte and WriteByte can be hidden from a user
+while PowerUp will be exposed as a public function. Using C++ also gives us the
+ability to use a constructor when using the WHCSNrf class, and in this
+constructor we can assign the only thing varying between uses of the NRF, the
+chip enable pin and the chip select not pin. Assigning the ce pin and the csn
+pin are the first step of using the NRF driver. Any communication between the
+microcontroller and the NRF will rely on the proper assignment of these pins.
+
+\ucfgfx{fig:nrf-class-diagram}{a51-img002.png}{NRF Class Diagram}
+
+Usage of the NRF driver will involve first constructing the class by telling
+the microcontroller which pins the NRF is connected to. Then the user will be
+doing everything necessary to customize the way that data is transmitted and
+received. The driver exposes the common settings in an easy to access manner.
+Enabling things such as auto{}-acknowledgement and the number of retries for
+the transceiver can be done with the call of a function with simple parameters.
+Setting the address for receiving and transmitting data can be done in one line
+of code. The SetTxAddr function will be one of the most utilized function for
+an NRF involved in a network constantly sending payloads to other chips. A
+typical use will involve powering up the NRF with the PowerUp call, setting the
+transmission address, writing a payload, and then transmitting a payload. With
+this driver, the user does not need to know the registers involved with the
+NRF. The hardware interactions with the chip are all abstracted away.
 
 % Section 5.1.4
 \subsubsection{Network Library}
